--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -14,7 +14,7 @@ spec:
         spec:
             containers:
                 - name: auth
-                  image: us.gcr.io/shop-ms-291411/auth
+                  image: us.gcr.io/wiseup-292111/auth
                   resources:
                       limits:
                           memory: "256Mi"
