cokie-session set to send jwt token in sign-up process. JSON representation/transformation on user mongoose model implemented. could be separeted to View logic, not Model logic, but for now it is left right here

--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -19,8 +19,12 @@ spec:
                       limits:
                           memory: "256Mi"
                           cpu: "100m"
-                  # ports:
-                  # - containerPort: <Port>
+                  env:
+                      - name: JWT_KEY
+                        valueFrom:
+                            secretKeyRef:
+                                name: jwt-secret
+                                key: JWT_KEY
 ---
 apiVersion: v1
 kind: Service
