--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "^9.5.5",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "tailwindcss": "^1.9.2"
   },
   "devDependencies": {
     "@types/node": "^14.11.8",
