--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,14 @@
   "author": "Nedim Kulovac",
   "license": "ISC",
   "dependencies": {
+    "@types/yup": "^0.29.8",
+    "axios": "^0.20.0",
+    "formik": "^2.2.0",
     "next": "^9.5.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "tailwindcss": "^1.9.2"
+    "tailwindcss": "^1.9.2",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@types/node": "^14.11.8",
